Bug 263099 - [WebGPU] A RenderBundle with several calls to setPipeline may not be built correctly
Summary: [WebGPU] A RenderBundle with several calls to setPipeline may not be built co...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-10-12 18:05 PDT by Mike Wyrzykowski
Modified: 2023-10-26 14:23 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Wyrzykowski 2023-10-12 18:05:50 PDT
[WebGPU] A RenderBundle with several calls to setPipeline may not be built correctly

The reason is we can change the pipeline state via -[MTLIndirectRenderCommand setRenderPipelineState:] but not the depth / stencil state.

A website may call GPURenderBundleEncoder.setPipelineState() multiple times with different depth / stencil states and I think we need to create a new ICB to handle that correctly.
Comment 1 Radar WebKit Bug Importer 2023-10-12 18:06:36 PDT
<rdar://problem/116893300>
Comment 2 Mike Wyrzykowski 2023-10-13 11:35:14 PDT
Pull request: https://github.com/WebKit/WebKit/pull/19057
Comment 3 EWS 2023-10-26 14:23:05 PDT
Committed 269826@main (17f80e19eb23): <https://commits.webkit.org/269826@main>

Reviewed commits have been landed. Closing PR #19057 and removing active labels.